--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^4.5.4",
     "uvu": "^0.5.3",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "mathlive": "^0.104.2"
   }
 }
