feat: new editor

--- a/package.json
+++ b/package.json
@@ -1,23 +1,49 @@
 {
-  "name": "create-ilf-editor",
-  "version": "0.0.2",
-  "bin": {
-    "create-ilf-editor": "create.js"
+  "name": "@tamtam-chat/message-editor",
+  "description": "Компонент поля ввода сообщения для веб-версии TamTam",
+  "version": "0.11.3",
+  "type": "module",
+  "main": "./dist/editor.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "import": "./dist/editor.js",
+    "require": "./dist/editor.cjs"
   },
   "scripts": {
-    "dev": "vite --port 3100",
-    "build": "tsc && vite build",
-    "test": "uvu -r tsm ./test",
-    "preview": "vite preview"
+    "test": "node --import tsx --test ./test/*.ts",
+    "dev": "vite --port=3100 --host",
+    "build": "tsc --emitDeclarationOnly && npm run build-lib",
+    "build-parser": "BUILD=parser vite build",
+    "build-lib": "BUILD=lib vite build",
+    "build-demo": "BUILD=demo vite build",
+    "clean": "rm -rf ./dist",
+    "prepare": "npm test && npm run clean && npm run build && npm run build-parser"
   },
+  "keywords": [],
+  "author": "Sergey Chikuyonok <serge.che@gmail.com>",
+  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^17.0.17",
-    "tsm": "^2.2.1",
-    "typescript": "^4.5.4",
-    "uvu": "^0.5.3",
-    "vite": "^2.8.0"
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   },
   "dependencies": {
-    "mathlive": "^0.104.2"
-  }
+    "mathlive": "^0.98.6"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tamtam-chat/message-editor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tamtam-chat/message-editor/issues"
+  },
+  "homepage": "https://github.com/tamtam-chat/message-editor#readme"
 }
