--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build-lib": "BUILD=lib vite build",
     "build-demo": "BUILD=demo vite build",
     "clean": "rm -rf ./dist",
-    "prepare": "npm test && npm run clean && npm run build && npm run build-parser"
+    "prepare": "npm test && npm run clean && npm run build && npm run build-parser",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Sergey Chikuyonok <serge.che@gmail.com>",
@@ -27,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
+    "gh-pages": "^6.3.0",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
