--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "bugs": {
     "url": "https://github.com/tamtam-chat/message-editor/issues"
   },
-  "homepage": "https://github.com/tamtam-chat/message-editor#readme"
+  "homepage": "https://yaroshuk.github.io/MathEditor/"
 }
